Mise a jour du portfolio + traduction a jour Oct 2025

--- a/HTML/2015-2016.html
+++ b/HTML/2015-2016.html
@@ -8,9 +8,9 @@
 
 <h1> 2015-2016 </h1>
 <h3> Password Secure </h3>
-<p>Password secure est une application mobile que j'ai crée pour le baccalaureat.<br> En effet en spécialité ISN il fallait créer un outil utile pour tous les jours.
-J'ai donc décidé de créer une application qui génère des mots de passes aléatoirement en fonction d'un niveau de difficulté souhaité ainsi que le nombre de caractères. Ces niveaux de difficulté font varier la quantité de caractères spéciaux ainsi que la mise en place ou non de majuscule au coeur du mot de passe.<br>
-Nous pouvons par la suite à l'aide d'un espace sécurisé et personnel acceder à tous les mots de passes enregistrés et libellés.</p>
+<p>Password Secure is a mobile application I created for the baccalaureate.<br> In the ISN (Computer Science) specialization, we had to build a useful everyday-tool.
+I therefore decided to create an app that randomly generates passwords based on a chosen difficulty level and the desired number of characters. These difficulty levels adjust the amount of special characters and whether uppercase letters are placed within the password.<br>
+Users can then access all saved and labeled passwords from a personal, secure area.</p>
 <br>
 <img src="../IMG/ChoixLvl.png" alt="Choix de la difficulté du mot de passe"width="24%" height="50%">
 <img src="../IMG/ChoixNb.png" alt="Choix du nombre de caractères dans le mot de passe"width="24%" height="50%">
@@ -19,6 +19,6 @@ Nous pouvons par la suite à l'aide d'un espace sécurisé et personnel acceder 
 <br>
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
