--- a/HTML/2016-2017.html
+++ b/HTML/2016-2017.html
@@ -7,17 +7,17 @@
 <body>
 
 <h1> 2016-2017 </h1>
-<h3> Donjons et Dragons </h3>
-<p> Lors de ma rentrée en première année de licence en Informatique nous devions créer un système de combat au tour par tour type RPG.
-J'ai donc décidé de reprendre le concept de D&D  avec toute une aventure à travers un donjon plein de monstres en version textuelle. <br>
-Le joueur peut decider du nombre de héros dans son equipe parmis 17 héros différents.
-<br>De plus le jeu peut se jouer en JcJ avec un ami ou bien laisser l'ordinateur jouer tout seul avec un système d'IA.</p>
-<p>Lien vers le rapport PDF de donjons et dragon <a href="../IMG/rapport.pdf">ici</a></p>
+<h3> Dungeons & Dragons </h3>
+<p> During my first year of a Computer Science degree, we had to create a turn-based RPG combat system.
+I decided to build on the concept of Dungeons & Dragons, creating an entire adventure through a monster-filled dungeon in a text-based format. <br>
+The player can choose the number of heroes in their team from a selection of 17 different heroes.
+<br>Additionally, the game can be played PvP with a friend or allow the computer to play autonomously using an AI system.</p>
+<p>Link to the Dungeons & Dragons PDF report <a href="../IMG/rapport.pdf">here</a></p>
 <br>
 <img src="../IMG/D_D.png" alt="Choix des héros"width="65%" height="25%"class="center" >
 <img src="../IMG/StatD_D.PNG" alt="Stats des héros disponibles."width="65%" height="25%"class="center">
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
