--- a/HTML/2017-2018.html
+++ b/HTML/2017-2018.html
@@ -8,18 +8,15 @@
 
 <h1> 2017-2018 </h1>
 <h3> Pegguy </h3>
-<p>Pegguy est un platformer 2D crée à l'occasion d'un concours de gameDesign. Le thème etait "Label et la Bete". Nous avons donc décidé de nous orienter vers le label PEGI permettant de classer les jeux
-  en fonction de leur violence, images etc. Le jeu est composé de plusieurs tranches de vie de Pegguy en fonction de son age que le joueur va découvrir. Le jeu est une caricature des labels PEGI toujours
-  à la limite. </p>
+<p>Pegguy is a 2D platformer created for a game design contest. The theme was "Label and the Beast." We decided to focus on the PEGI rating system, which classifies games based on their violence, imagery, etc. The game consists of several slices of Pegguy’s life at different ages, which the player will discover. The game is a caricature of PEGI ratings, always pushing the limits. </p>
 <img src="../IMG/Pegguy.png" alt="Pegguy, l'héroine"width="2%" height="7%">
 <img src="../IMG/PegguyWeapon.png" alt="Pegguy, l'héroine armé"width="2%" height="7%">
 <br>
 <img src="../IMG/NiveauPegguy.png" alt="Aperçue d'un niveau de Pegguy"width="40%" height="30%" class="center">
 <br>
 <h3> Knowledge to Escape </h3>
-<p> Knowledge to Escape est un jeu crée lors de la Global Gam Jam 2018 dont le thème etait la transmission. Le joueurs incarne un petit personnage qui doit s'echapper d'un laboratoire.<br>
-Malheuresement le temps est son ennemi et il sera forcé de réapparaitre dans son HUB toutes les 30 secondes. Pour avancer dans l'histoire il doit récuperer des neurones a travers la carte pour acheter des
-capacités tels que sauter, la possibilité de s'accroupir ou même allonger le temps de liberté en dehors du HUB. Le jeu est composé de deux niveaux ainsi qu'une <a href="https://soundcloud.com/brieux-caquelin/bios">ambiance sonore propre</a>.
+<p> Knowledge to Escape is a game created during the 2018 Global Game Jam, whose theme was "Transmission." The player controls a small character who must escape from a laboratory.<br>
+Unfortunately, time is his enemy, and he is forced to respawn in his HUB every 30 seconds. To progress through the story, he must collect neurons scattered across the map to purchase abilities such as jumping, crouching, or even extending his free time outside the HUB. The game consists of two levels as well as a <a href="https://soundcloud.com/brieux-caquelin/bios">a unique sound atmosphere</a>.
 </p>
 <audio controls class="center">
   <source src="../IMG/Bios.ogg" type="audio/ogg" class="center">
@@ -31,21 +28,21 @@ capacités tels que sauter, la possibilité de s'accroupir ou même allonger le 
 <img src="../IMG/CrunchKTE.png" alt="Héros de KTE en mode accroupis"width="32%" height="12%" class="center">
 <br>
 <h3> Undead </h3>
-<p> Undead est le projet de fin de Licence2. Il s'agit ici d'un jeu de reflexion. Le joueur doit resoudre des casses têtes en placant des fantomes, vampires et zombies sur un plateau.</p>
-<p> Il s'agit d'une recréation du jeu de <a href="http://www.chiark.greenend.org.uk/~sgtatham/puzzles/js/undead.html"> Simon Tatham </a>,<br> dont le rapport peut être télécharger <a href="../IMG/RapportTM5Z.pdf"> ici </a></p>
+<p> Undead is my second-year Bachelor’s final project. It is a puzzle game where the player must solve challenges by placing ghosts, vampires, and zombies on a board.</p>
+<p> It is a recreation of the game created by <a href="http://www.chiark.greenend.org.uk/~sgtatham/puzzles/js/undead.html"> Simon Tatham </a>,whose report can be downloaded <a href="../IMG/RapportTM5Z.pdf"> here </a></p>
 <img src="../IMG/UndeadInterface.png" alt="Interface de Undead version TM5Z" width="20%" height="20%" class="center">
 
 <br>
 <h3> 2048 </h3>
-<p> 2048 est un petit projet que j'ai tutoré avec des Terminales de mon ancien lycée lorsque j'etais en 2ème année de licence. Il s'agit du célèbre jeu mobile en version ordinateur codé entièrement sous Python3<br>
-Mon role dans ce projet etait de créer une version clean qui servait de correction aux élèves pour les aider a créer de meilleurs jeux. </p>
-<p>Le jeu est disponible sous format ZIP via <a href="../IMG/2048.zip">ce lien</a></p>
+<p> 2048 is a small project that I supervised with high school people from my former school during my second year of university. It is the famous mobile game in a computer version, fully coded in Python 3.<br>
+My role in this project was to create a clean version that served as a reference for the students, helping them develop better games. </p>
+<p>The game is available as a ZIP file via <a href="../IMG/2048.zip">this link</a></p>
 <img src="../IMG/2048Menu.png" alt="Menu principal 2048"width="32%" height="12%" >
-<img src="../IMG/2048Game.png" alt="Interface de jeu 2048"width="32%" height="12%" >
+<img src="../IMG/2048Game.png" alt="Interface de sjeu 2048"width="32%" height="12%" >
 <img src="../IMG/2048End.png" alt="Ecran fin de jeu"width="32%" height="12%" >
 <br>
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
