--- a/HTML/2018-2019.html
+++ b/HTML/2018-2019.html
@@ -8,50 +8,47 @@
 
 <h1> 2018-2019 </h1>
 <h3> Cyber vs Steam </h3>
-<p> Cyber vs Steam est un jeu textuel pour lequel l'objectif etait de faire un jeu en 24h en Java de A à Z pour voir ce que j'etais capable de faire avec un langage que je ne connaissais pas du tout.<br>
-Le concept est simple puisqu'il s'agit de base du jeu de société Croque Carotte avec quelques changements pour rendre le jeu plus interresant. Le jeu peut se jouer a 4 joueurs maximum. le but du jeu etant d'atteindre le trésor.<br>
-Le thème cyberpunk et steampunk a été choisit a posteriorie dans l'eventuelle idée de faire une version graphique.<br>
-Lors de son tour chaques joueurs à trois choix qui s'offre à lui. Soit créer un nouveau héros parmis 3 types (Soutien, Lourd ou Rapide), utiliser des capacités spéciales propres à chaque classe ou bien utiliser un héros déjà posé sur le plateau pour le faire avancer normalement. </p>
-<h5> Version textuelle </h5>
+<p> Cyber vs Steam is a text-based game created with the goal of developing a complete game from scratch in 24 hours using Java, to test what I was capable of doing with a language I had no prior experience with.<br>
+The concept is simple, as it is basically based on the board game Croque Carotte, with a few changes to make the game more interesting. It can be played by up to 4 players, with the goal of reaching the treasure.<br>
+The cyberpunk and steampunk theme was chosen afterwards, with the potential idea of creating a graphical version in the future.<br></p>
+<h5> Text version </h5>
 <img src="../IMG/cvs.png" alt="Debut du jeu et choix de création de héros" width="49%" class="center"/>
 <img src="../IMG/cvs2.png" alt="Etat du jeu après quelques tours et choix de l'action" padding="2" width="49%" class="center"/>
-<h5> Croquis des personnages </h5>
+<h5> Characters drawing </h5>
 <img src="../IMG/ArtWorkCVS.jpg" alt="Splashart rapideSteam" width="49%" class="center"/>
 <img src="../IMG/ArtWorkCVS2.jpg" alt="Planche croquis personnages" width="49%" class="center"/>
 <br>
 <h3> Gra </h3>
-<p> Gra est le projet de fin d'année de ma troisième année en Informatique. Il s'agit d'un jeu pour Borne d'arcade de scoring crée à l'aide du moteur Unity.
-Il s'agit du jeu le plus complet que j'ai fais jusqu'a present puisqu'il est jouable de A à Z et reste installé sur la borne de la FDS de Montpellier.
-Toute la partie code à été crée par mon groupe et moi même tandis que toute la partie graphique se compose d'asset libre de droit tel que la <a href="https://soundcloud.com/andrewisaias/warped-fantasy-preview-track"> musique</a>.<br>
-L'inspiration vient des jeux des années 70/80 où les jeux n'avaient pas de but précis autre qu'être le premier sur le tableau des meilleurs scores.
-Il s'agit ici d'un jeu à deux joueurs favorisant la coopération ainsi que la communication pour réussir a atteindre le meilleur score.<br>
-L'un des gros points forts du jeu est l'ajout d'un système de génération de niveau totalement procédural et aléatoire permettant aux joueurs
-de ne jamais rejouer sur le même niveau malgrès une quantité infinie d'heures de jeu.</p>
+<p> Gra is the final-year project of my third year in Computer Science. It is a scoring arcade game created using the Unity engine.
+It is the most complete game I have made so far, as it is fully playable and remains installed on the arcade cabinet at FDS Montpellier.
+All the coding was done by my group and me, while all the graphics are composed of royalty-free assets such as the <a href="https://soundcloud.com/andrewisaias/warped-fantasy-preview-track"> music</a>.<br>
+The inspiration comes from games of the 70s and 80s, where the only goal was to reach the top of the high score table.
+This is a two-player game that encourages cooperation and communication to achieve the highest score.<br>
+One of the game’s major strengths is the addition of a fully procedural and random level generation system, allowing players to never play the same level twice, even after countless hours of gameplay.</p>
 <img src="../IMG/MenuGra.png" alt="Splashart rapideSteam" width="49%" class="center"/>
 <img src="../IMG/GraBegin.png" alt="Planche croquis personnages" width="49%" class="center"/>
-<p>Le code permettant la génération aléatoire des niveaux est <a href="../IMG/PlatformGenerator.cs">disponible à la lecture</a></p>
+<p>The code responsible for the random level generation is <a href="../IMG/PlatformGenerator.cs">available to read</a></p>
 <br>
-<h3>Boss Generation sous Unity</h3>
-<p> J'ai, dans le cadre de la participation d'un projet TER de master, crée la scène brouillon de leur boss final. Il s'agit d'une salle contenant un boss avec des plate-formes se générant aléatoirement d'un bord de l'ecran et parcourant la salle vers l'autre bord à la manière de certains boss de Cuphead.<br>
-Le boss possède 5 attaques différentes dont le choix est encore une fois aléatoire</p>
+<h3>Boss Generation using Unity</h3>
+<p>As part of my involvement in a Master’s TER project, I created the draft scene for their final boss. It is a room containing a boss with platforms that spawn randomly from one side of the screen and move across the room to the other side, similar to some bosses in Cuphead.<br>
+The boss has five different attacks, with the choice of attack once again being random.</p>
 <ul class = 'center'>
-<li>Une attaque provenant du plafond</li>
-<li>Une attaque changeant les plate-formes existante en plate-formes de poisons </li>
-<li>Un tir direct dont la trajectoire droite est aléatoire entre l'origine et sa cible</li>
-<li>Une attaque en style 3D provenant de la caméra</li>
-<li>La création d'une zone triangulaire où le joueur ne doit pas être présent lors de son activation</li>
+<li>One coming from the sky</li>
+<li>One switching platforms to killing one </li>
+<li>Direct shoot randomly distribute</li>
+<li>One coming from the camera view</li>
+<li>Creation of a triagular area where the player should not be</li>
 </ul>
-<p> Le script principal servant au choix des attaques ainsi que l'execution des attaques est <a href="../IMG/BossAttack.cs">disponible à la lecture</a></p>
+<p>The main script responsible for selecting and executing the attacks is <a href="../IMG/BossAttack.cs">available to read</a></p>
 <video class='center' width="800" controls>
 <source src="../IMG/UnityBossGeneration.mp4" type="video/mp4">
-Your browser does not support HTML5 video.
 </video>
 <br>
 <h3> Portfolio </h3>
-<p> J'ai aussi crée cette année mon portfolio sous la forme d'un site web, crée sans template. Le lien du site est disponible <a href="../index.html"> ici</a> </p>
+<p> I also created my portfolio which you're reading at this time </p>
 <img src="../IMG/PortfolioInside.png" alt="Image de l'index du portfolio" class="center"/>
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
