--- a/HTML/2020-2021.html
+++ b/HTML/2020-2021.html
@@ -8,41 +8,42 @@
 <body>
 
 <h1> 2020-2021 </h1>
-<h3>Jeu de societe : Magic Di Rosa</h3>
-<p> Magic Di Rosa est un projet semestriel de creation de jeu de societe au sein de l'ETPA. L'objectif du projet est de recreer un jeu de societe existant en mixant un film et un artiste. En l'occurence j'ai eu Herve Di Rosa, artiste Setois et Porco Rosso un des film de Miyazaki. Les graphismes et les illustrations ont ete entierement pensée par moi et ont ete polies par un eleve en design graphique.
-<br>Le GDD du jeu est disponible <a href="../IMG/GDD_Miyazaki_Porco_Rosso.pdf"> ici </a><br>
+<h3>Board game: Magic Di Rosa</h3>
+<p> Magic Di Rosa is a semester-long board game creation project at ETPA. The goal of the project is to recreate an existing board game by combining a film and an artist. In this case, I worked with Hervé Di Rosa, a Sete-based artist, and Porco Rosso, one of Miyazaki’s films. All the graphics and illustrations were entirely designed by me and refined by a graphic design student.
+<br>GDD is available here <a href="../IMG/GDD_Miyazaki_Porco_Rosso.pdf"> ici </a><br>
 <img src="../IMG/Résultat.png" alt="Présentation du résultat" width="49%" class="center"/>
 <img src="../IMG/Adaptation.png" alt="Adaptation des visuels" width="49%" class="center"/>
 
 <h3>Ataraxy </h3>
-<p>Ataraxy est un jeu de la GlobalGameJam 2021 dont le theme etait Perdu-Retrouve. Ataraxy est un jeu narratif dont le but est de collecter des artefacts, représentant chacun différentes émotions, pour atteindre l'ataraxie (la tranquillité de l'âme). Le game design qui comporte essentiellement 2 phases : le déplacement de l'âme du joueur dans une sorte de labyrinthe, et une phase plus technique, consistant à sonder une zone en 3 dimensions pour trouver l'artefact invisible.
-<br> Un visuel du jeu est disponible ainsi que la <a href="https://v3.globalgamejam.org/2021/games/ataraxy-2"> version jouable </a>
+<p>Ataraxy is a game from the 2021 Global Game Jam, whose theme was "Lost and Found." Ataraxy is a narrative game where the goal is to collect artifacts, each representing a different emotion, to achieve ataraxia (peace of mind). The game design primarily consists of two phases: navigating the player’s soul through a maze-like environment, and a more technical phase, where the player must probe a 3D area to locate the invisible artifact.
+<br> A visual of the game is available, as well as the <a href="https://v3.globalgamejam.org/2021/games/ataraxy-2"> playable version </a>
 <video class='center' width="800" controls>
 <source src="../IMG/Ataraxy.mp4" type="video/mp4">
 
 <h3>Lardon's Adventure</h3>
-<p>Lardon's Adventure est mon projet de fin de première année a l'ETPA, il s'agit de la création d'un plateformer format web a l'aide de Phaser 3(librairie JS). Le principe etait de reprendre des méchaniques et de s'inspirer de Mario Bros pour créer son propre jeu de plateforme. Ici le joueur a la possibilité de passer dans une seconde phase de gameplay ou il arrete le temps et ou il peut programmer ses propres compétences à l'aide de points de programmation.
-Le <a href="../IMG/GameConcept_Lardon_s Adventure.pdf">Game Concept</a> ainsi que le <a href="../IMG/GDD Lardon_s Adventure.pdf">GDD</a> sont disponible à la lecture. La version jouable est disponible sur <a href="https://brieux.itch.io/lardons-adventure"> Itch.io </a>
+<p>Lardon’s Adventure is my end-of-first-year project at ETPA. It is a web-based platformer created using Phaser 3 (a JS library). The goal was to take inspiration from Mario Bros and its mechanics to create a unique platformer. In this game, the player can enter a second gameplay phase where time stops, allowing them to program their own abilities using programming points.
+<a href="../IMG/GameConcept_Lardon_s Adventure.pdf">Game Concept</a> as well as <a href="../IMG/GDD Lardon_s Adventure.pdf">GDD</a> are available. Playable version is also on <a href="https://brieux.itch.io/lardons-adventure"> Itch.io </a>
 <img src="../IMG/ArtWork.jpg" alt="ArtWork Lardon" width="49%" class="center"/>
 
 <h3>Rec</h3>
-<p>Voici REC, un prototype de jeu réalisé par mes camarades de 1ère année à Montpellier, dans le cadre de l'option "Création de jeu vidéo".
-L'objectif était de créer un jeu parfaitement jouable en 1 mois et demi, avec un début et une fin. A noter que la programmation, le level design et le sound design ont été réalisés par nous meme, tandis que les assets 3D et l'animation du clone viennent d'une librairie existante.
-Dans ce FPS teinté d'énigmes, le joueur se retrouve dans un laboratoire où il sert de cobaye. Le moindre de ses faits et gestes est enregistré par l'IA durant une période donnée. Puis, celle-ci crée un clone qui va reproduire les actions du joueur, dans le but d'aider ce dernier à résoudre des énigmes. Le temps de jeu est approximativement de 25-30 min et correspond à la résolution de 7 énigmes (en plus du tutoriel).</p>
-<p><a href="https://youtu.be/2Pe9-qL0NBg"> Vidéo du gameplay globale </a></p>
+<p>Here is REC, a game prototype created by my first-year classmates in Montpellier as part of the "Video Game Creation" course.
+The goal was to create a fully playable game within a month and a half, with a clear beginning and end. It should be noted that the programming, level design, and sound design were done by us, while the 3D assets and the clone animation came from an existing library.
+
+In this puzzle-infused FPS, the player finds themselves in a laboratory, serving as a test subject. Every action they take is recorded by the AI over a set period, which then creates a clone that replicates the player’s actions to help solve puzzles. The gameplay lasts approximately 25–30 minutes, covering seven puzzles in addition to the tutorial.</p>
+<p><a href="https://youtu.be/2Pe9-qL0NBg"> Gameplay video  </a></p>
 <img src="../IMG/RecLogo.png" alt="Logo REC" width="25%" class="center"/>
 <img src="../IMG/RecIG.png" alt="InGame REC" width="49%" class="center"/>
 <img src="../IMG/LoadingRec.png" alt="Loading REC" width="49%" class="center"/>
 
 <h3>Mutegg</h3>
 
-<p>Mutegg est un jeu crée pendant une Game Jam inter campus de mon école. Le thème était "Communiquer sans parler". L'objectif était de faire un jeu fun dès la première seconde de gameplay. Pour ce faire nous avons décidé de faire un jeu en écran scindé a deux joueurs. </p>
-<p>Toute la partie programmation était à ma charge tandis que mes coéquipiers se sont occupés du level design, level art, game design et narration. Le joueur incarne un chef d'entreprise qui doit ramerer ses salariés travailler dans les salles de réunion. Pour ce faire il dispose de trois actions : il peut montrer la direction pour avoir une influence sur les salariés qui ont des yeux. Il peut clapper des mains pour appeler les employés qui ont des oreilles ou alors péter pour faire fuire ceux qui sentent</p>
-<p><a href="https://stingart.itch.io/mutegg"> Le jeu est téléchargeable ici </a></p>
+<p>Mutegg is a game created during an inter-campus Game Jam at my school. The theme was "Communicate Without Speaking." The goal was to make a game that is fun from the very first second of gameplay. To achieve this, we decided to create a split-screen, two-player game. </p>
+<p>I was responsible for all the programming, while my teammates handled level design, level art, game design, and narrative. The player takes on the role of a company manager who must get their employees to work in the meeting rooms. To do this, the player has three actions: they can point the way to influence employees with eyes, clap their hands to call those with ears, or fart to scare away those who can smell.</p>
+<p><a href="https://stingart.itch.io/mutegg"> Game is downloadable here </a></p>
 <img src="../IMG/Mutegg.jpg" alt="Icon Mutegg" width="49%" class="center"/>
 <img src="../IMG/IGMutegg.jpg" alt="IN Game Mutegg" width="49%" class="center"/>
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
