--- a/HTML/2021-2022.html
+++ b/HTML/2021-2022.html
@@ -8,56 +8,71 @@
 
 <h1> 2020-2021 </h1>
 <h3>L'Arbre Blanc : Le Jeu</h3>
-<p>L'Arbre Blanc : Le Jeu est le projet de premier trimestre de l'ETPA. Il s'agit d'un serious game crée par Corentin HABIB et moi-même. La consigne était de prendre un bâtiment ou un lieu touristique de Montpellier et d'en faire un serious game pour enfant âgé de 8 à 12 ans sur mobile. Notre choix s'est porté sur l'Arbre Blanc, célèbre bâtiment de Montpellier par son architecture. L'objectif du jeu était de retrouver l'Arbre Blanc en retransmettant le côté déroutant de son architecture par une reinterpretation du celebre jeu de puzzle. Pour se faire le bâtiment à été modéliser en entier pour ensuite le casser en plusieurs morceaux qui serviraient de pièces de puzzle. Le jeu se joue sur Android et est développé sur Unity. Pas mal de contraintes ont donc était imposées : un élément riggeable dans le jeu (notre bâtiment), des informations au fur et à mesure de l'avancé ainsi qu'une documentation approfondie en amont.</p>
-<p>Le walkthough complet du jeu est <a href="../IMG/Walkthrough_AB.pdf"> disponible à la lecture </a></p>
+<p>L’Arbre Blanc: Le Jeu is the first-term project at ETPA. It is a serious game created by Corentin HABIB and me. The brief was to take a building or a tourist site in Montpellier and turn it into a serious game for children aged 8 to 12 on mobile. We chose L’Arbre Blanc, a famous building in Montpellier known for its architecture.
+
+The goal of the game was to recreate L’Arbre Blanc while conveying the disorienting aspect of its architecture through a reinterpretation of the classic puzzle game. To achieve this, the building was fully modeled and then broken into several pieces to serve as puzzle pieces.
+
+The game runs on Android and was developed using Unity. Several constraints were imposed: a riggable element in the game (our building), providing information progressively as the player advances, and comprehensive documentation prepared beforehand.</p>
+<p>Complete walkthough is ready <a href="../IMG/Walkthrough_AB.pdf"> to read </a></p>
 <iframe class='center'width="1268" height="713" src="https://www.youtube.com/embed/4zaqhVgn4I0" title="Video Gameplay AB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p><a href="../IMG/Arbre_blanc.zip"> Le jeu est disponible ici </a></p>
+<p><a href="../IMG/Arbre_blanc.zip"> Game available on itch.io </a></p>
 
 <h3>Traffic Car Traffic Road</h3>
-<p> Traffic Car Traffic Road est un jeu crée en une journée dont l'objectif était de créer à l'aide d'Unity un jeu "Hyper-casual" pour montrer la rapidité de création si l'on veut faire de ce style de jeu notre spécialité. Le jeu s'insipire donc des jeux phares du playStore et appStore.
- Il s'agit d'un jeu avec un seul contrôle : le touch. Il permet de déplacer sa voiture le long d'un guide pré-établis par les levels Designers. Le joueur doit choisir les bons timings pour ne pas avoir d'accident.</p>
-<p><a href="https://thazerr.itch.io/trafficcartrafficroad"> Le jeu est disponible ici </a>| Utilisant WebGL le jeu est jouable directement sur navigateur.</p>
+<p> Traffic Car Traffic Road is a game created in one day, with the goal of using Unity to make a hyper-casual game and demonstrate how quickly such games can be developed if this style is chosen as a specialty. The game is inspired by popular titles on the Play Store and App Store.
+
+It features a single control: touch. The player uses it to move their car along a path pre-designed by the level designers. The player must time their movements carefully to avoid accidents.</p>
+<p><a href="https://thazerr.itch.io/trafficcartrafficroad"> Game available here </a>| Using WebGL library the game is ready to play directly on browser.</p>
 <img src="../IMG/TrafficCar.png" alt="trafficcartrafficroad in game" width="25%" class="center"/>
 
 <h3>Runic Golem</h3>
-<p>Runic Golem est ma 3ème participation à la GlobalGameJam le thème étant cette année là : Dualité. Nous avons voulu faire un jeu de réflexion s'inspirant sur certains points des échecs. En effet le joueur incarne un jeune magicien qui navigue sur des îles volantes autour d'un vortex géant. Le vortex géant invoque des golems élémentaires que le mage doit combattre. Pour ce faire il se deplacera d'île en île pour récuperer des runes et lancer de puissants sortilèges. L'objectif du joueur est de préparer ses coups à l'avance au tour par tour pour combattre efficacement les hordes d'ennemis. Lors de cette game jam nous étions une équipe de 6 participants et nous avons tout créer de A à Z en passant par les musiques ainsi que les modèles 3D. Le jeu est fait sous Unreal5 pour profiter de toutes les nouvelles technologies telles que Lumen ou encore Nanite.
+<p>Runic Golem is my third participation in the Global Game Jam, whose theme that year was “Duality.” We aimed to create a puzzle-strategy game inspired in part by chess. The player takes on the role of a young magician navigating floating islands around a giant vortex. The vortex summons elemental golems that the mage must defeat.
+
+To do this, the player moves from island to island to collect runes and cast powerful spells. The goal is to plan turns in advance to efficiently combat waves of enemies. During this Game Jam, our team of six created everything from scratch, including music and 3D models. The game was developed in Unreal Engine 5 to take advantage of new technologies such as Lumen and Nanite.
 <br>
-<br>Le jeu est jouable <a href="https://vinek.itch.io/runic-golems"> ici </a></p>
+<br>Game is playable <a href="https://vinek.itch.io/runic-golems"> here </a></p>
 <br>
 <img src="../IMG/IGRG.png" alt="In Game Runic Golem" width="25%" class="center"/>
 <img src="../IMG/creditRG.png" alt="crédit Runic Golem" width="25%" class="center"/>
 
-<h3>Opéra Tosca</h3>
-<p> Opéra Tosca est un projet professionel missioné par l'Opéra de Montpellier. L'objectif est de mettre en lumière la création de jeu vidéo en lien avec l'Opéra. Nous avons travaillé sur Tosca de Giacomo Puccini. Pour nous le coeur du jeu était de mettre en avant la musique et la lutte de la cantatrice contre son antagoniste le Baron. Nous avons voulu pour relever ce défi faire un jeu de rythme qui rejouera tout le second acte de la pièce, en usant de son habileté à la manette pour suivre la courbe de chant de son avatar.</p>
+<h3>Opera Tosca</h3>
+<p>Opera Tosca is a professional project commissioned by the Opéra de Montpellier. The goal was to highlight video game creation in connection with opera. We worked on Tosca by Giacomo Puccini.
+
+For us, the heart of the game was to emphasize the music and the soprano’s struggle against her antagonist, the Baron. To meet this challenge, we created a rhythm game that replays the entire second act of the opera, requiring players to use their controller skills to follow the singing curve of their avatar.</p>
 <br>
 <img src="../IMG/LogoTosca.png" alt="Logo Tosca" width="25%" class="center"/>
 <img src="../IMG/beginTosca.png" alt="Begin Tosca" width="25%" class="center"/>
 <img src="../IMG/IGTosca.png" alt="In Game Tosca" width="25%" class="center"/>
 <br>
-<p>Le jeu à était felicité par l'équipe d'encadrement ainsi que par le commanditaire : l'Opéra National de Montpellier</p>
-<p>Le lien pour y jouer est <a href="https://romain-coutellier.itch.io/opera-tosca"> sur Itch.io </a></p>
+<p>The game was praised by both the supervising team and the client, the Opéra National de Montpellier.</p>
+<p><a href="https://romain-coutellier.itch.io/opera-tosca">Link to try out the game</a></p>
 
 <h3>Armistice</h3>
-<p>Armistice est un jeu crée lors de la Game Jam annuel inter Campus de l'ETPA. Cette année le thème était 'Guerre et Paix'. Mon équipe et moi-même avons décidé de faire incarner au joueur un soldat Français emissaire de la paix la veille de l'Armistice. Son objectif est de faire parvenir au Commandemant les ordres de cessez le feu avant la fin de la journée sachant que l'Armistice sera signée le lendemain. Il devra donc slalomer entre mines, bombes et tirs de mittrailleuse en se cachant dans les différents cratères d'obus ainsi que dans les tranchées. Le jeu est développé de A à Z par notre équipe et est réalisé sous Unreal Engine. Nous avons sur ce projet décidé de mettre en place certaines mécaniques de polish telles que la tête du héros qui est attiré vers des points d'interets le long de sa course ainsi que des traces de pas et de boue dans les tranchées. L'animation à était faite via Plask, une IA de création d'animation sur Rig Mixamo Compatible.
-</p>  <p><br> Le jeu est disponible via <a href="https://loulaty.itch.io/armistice"> ce lien </a></p>
+<p>Armistice is a game created during ETPA’s annual inter-campus Game Jam. That year’s theme was “War and Peace.” My team and I decided to have the player take on the role of a French soldier, a peace envoy on the eve of the Armistice. The goal is to deliver the ceasefire orders to command before the end of the day, knowing that the Armistice will be signed the following day.
+
+The player must dodge mines, bombs, and machine-gun fire while taking cover in shell craters and trenches. The game was developed entirely by our team using Unreal Engine. For this project, we implemented polish mechanics such as the hero’s head being drawn toward points of interest along the path, as well as footprints and mud in the trenches. Animations were created using Plask, an AI tool compatible with Mixamo rigs.
+</p>  <p><br> Game is available<a href="https://loulaty.itch.io/armistice"> on this link </a></p>
 <img src="../IMG/1Armistice.png" alt="In Game Armistice" width="25%" class="center"/>
 <img src="../IMG/2Armistice.png" alt="In Game Armistice" width="25%" class="center"/>
 <img src="../IMG/3Armistice.png" alt="In Game Armistice" width="25%" class="center"/>
 <img src="../IMG/cerditArmistice.jpg" alt="Crédit Armistice" width="25%" class="center"/>
 
 <h3>Two</h3>
-<p>Two est un jeu d'horreur crée dans le cadre du projet de second semestre de la deuxième année à l'ETPA. Il s'agit d'un jeu complet d'une trentaine de minutes fait sous Unreal5. Le joueur incarne un ingénieur spatiale qui doit aller réparer une station laboratoire. Lors de son arrivée l'ambiance et le manque de personnel commence à l'inquieter. Le joueur alterne entre chacunes des zones avec ou sans gravité. Il doit brancher des cables pour réparer l'éléctricité dans la station. Le jeu est developpé dans une durée de 3 mois avec une équipe de 5 personnes. Je me suis personnelement occupé de la programmation gameplay ainsi que du producing du projet. Le <a href="../IMG/GDD Two.pdf">GDD</a> est disponible à la lecture. Le monstre du jeu est notamment créer, sculplté, riggé et animé par nos soins. Nous avons utilisé notamment la motion capture pour la plupart des animations.
+<p>Two is a horror game created as part of the second-semester project in the second year at ETPA. It is a complete game lasting about thirty minutes, developed in Unreal Engine 5. The player takes on the role of a space engineer tasked with repairing a laboratory station. Upon arrival, the eerie atmosphere and the lack of personnel begin to unsettle them.
+
+The player alternates between zones with and without gravity and must connect cables to restore electricity in the station. The game was developed over three months by a team of five. I personally handled the gameplay programming as well as the project producing. <a href="../IMG/GDD Two.pdf">GDD</a> can be read. The game’s monster was created, sculpted, rigged, and animated entirely by our team. We used motion capture for most of its animations.
 <br>
-<br> Le jeu est jouable <a href="https://falty.itch.io/two"> ici </a></p>
+<br> Game is playable <a href="https://falty.itch.io/two"> here on itch.io </a></p>
 <iframe class="center" width="500" height="400" src="https://www.youtube.com/embed/AE5eHEwzgsU" title="Trailer - TWO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <img src="../IMG/IGTwo.png" alt="In Game Two" width="25%" class="center"/>
 <img src="../IMG/IGTwo2.png" alt="In Game Two" width="25%" class="center"/>
 
 <h3>Dice Of God</h3>
-<p> Dans le cadre de la GMTK 2022 dont le thème était : Roll Of Dice. Nous avons créer à deux avec un ami Dice Of God. Il s'agit d'un jeu fait sous Unreal 5 où le joueur incarne un Dieu qui doit protéger son village façe aux hordes d'ennemis. Il doit utiliser son lance-pierre pour lancer les dés à travers la carte pour viser les ennemis. Si les ennemis ne meurent pas du premier coup le joueur peut compter sur la magie invoquée par les faces du dé pour lancer de puissants sortilèges. Le joueur à la possibilité d'aller voir le forgeron pour modifier son dé tout le long de la partie.
+<p> As part of GMTK 2022, whose theme was “Roll of Dice,” my friend and I created Dice of God. It is a game developed in Unreal Engine 5 where the player takes on the role of a god who must protect their village from hordes of enemies.
+
+The player uses a slingshot to launch dice across the map to hit enemies. If enemies are not defeated in one hit, the player can rely on the magic invoked by the dice faces to cast powerful spells. The player can also visit the blacksmith throughout the game to modify their dice.
 <br> <br>
-Le jeu est téléchargeable sur <a href="https://thazerr.itch.io/dice-of-god"> itch.io </a></p>
+Can be play on <a href="https://thazerr.itch.io/dice-of-god"> itch.io </a></p>
 <br>
 <img src="../IMG/screen5.jpg" alt="In Game DOG" width="25%" class="center"/>
 <img src="../IMG/screen3.png" alt="In Game DOG" width="25%" class="center"/>
@@ -65,6 +80,6 @@ Le jeu est téléchargeable sur <a href="https://thazerr.itch.io/dice-of-god"> i
 
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
