--- a/HTML/2022-2023.html
+++ b/HTML/2022-2023.html
@@ -10,11 +10,11 @@
 
     <h3>Heart of the Abyss</h3>
     <p>
-        Heart of the Abyss (ou HOTA) est mon jeu de fin d'étude. Développé avec une équipe de 7 personnes nous avons travaillé sur le projet durant 10 mois.
+        Heart of the Abyss (HOTA) is my final-year project. Developed by a team of seven, we worked on this project for 10 months.
     </p>
-    <p>HOTA est un jeu ou le joueur incarne le SeaWatcher, le gardien des océans et il doit combattre une corruption qui ronge les abysses. Je me suis occupé de toute la partie programmation que ce soit gameplay, tool ou UI ainsi que de l'intelligence artificiel du boss du jeu. </p>
+    <p>HOTA is a game in which the player takes on the role of the SeaWatcher, guardian of the oceans, tasked with fighting a corruption consuming the abyss. I handled all the programming, including gameplay, tools, UI, and the AI for the game’s boss.</p>
     <br>
-    <p><a href="https://jonas-champoiral.itch.io/heart-of-the-abyss"> Le jeu est disponible ici au téléchargement </a></p>
+    <p><a href="https://store.steampowered.com/app/3075140/Heart_Of_The_Abyss/"> Game is ready to get download on Steam </a></p>
     <img src="../IMG/1HOTA.png" alt="Menu HOTA" width="25%" class="center" />
     <img src="../IMG/2HOTA.png" alt="In Tutorials HOTA" width="25%" class="center" />
     <img src="../IMG/3HOTA.png" alt="Big Crab in HOTA" width="25%" class="center" />
@@ -24,12 +24,11 @@
 
     <h3>Overcracked</h3>
     <p>
-        Overcracked est un jeu crée pour la Gacha 2022
-        Crée avec une équipe de 10 personnes totalement inconnues, je me suis occupé de toute l'intégration (animation, son, effet spéciaux, mesh et création de BP lié au mesh).
+    Overcracked is a game created for Gacha 2022. Developed with a team of 10 complete strangers, I was responsible for all integration, including animation, sound, special effects, meshes, and creating Blueprints related to the meshes.
     </p>
-    <p>Le jeu est un jeu multijoueur local développé sur Unreal 5 où les deux joueurs incarnent des kangouroos qui doivent créer de la drogue dans leur van à la manière d'Overcooked</p>
+    <p>The game is a local multiplayer title developed in Unreal Engine 5, where two players take on the roles of kangaroos who must produce drugs in their van, in a style similar to Overcooked.</p>
     <br>
-    <p><a href="https://thazerr.itch.io/overcracked"> Le jeu est disponible ici </a></p>
+    <p><a href="https://thazerr.itch.io/overcracked"> Itch.io link </a></p>
     <img src="../IMG/OvercrackedInGame.png" alt="In Game Overcraked" width="25%" class="center" />
     <img src="../IMG/Overcracked.png" alt="Lore Overcracked" width="25%" class="center" />
     <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2N4U7UcYeN0" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -37,42 +36,42 @@
     <br>
 
     <h3>Mangroot</h3>
-    <p>Mangroot est un jeu crée pour la Global Game Jam 2023. Il s'agit de ma 4eme participation a la Global. Le thème était : Roots. Nous avons décidé de faire un multijoueur local en split screen versus ou le joueur incarne une luciole et doit tuer son adversaire.</p>
-    <p>Le jeu est fait sous Unreal 5 et je me suis occupé de toute la partie programmation gameplay.</p>
+    <p>Mangroot is a game created for the 2023 Global Game Jam. It marks my fourth participation in the Global Game Jam. The theme was “Roots.” We decided to make a local split-screen versus multiplayer game where the player controls a firefly and must defeat their opponent.</p>
+    <p>The game was developed in Unreal Engine 5, and I handled all the gameplay programming.</p>
     <br>
-    <p><a href="https://thazerr.itch.io/mangroot"> Le jeu est disponible ici </a></p>
+    <p><a href="https://thazerr.itch.io/mangroot"> Itch.io link here </a></p>
     <img src="../IMG/MenuMangroot.png" alt="Menu Mangroot" width="25%" class="center" />
     <img src="../IMG/IGMangroot.png" alt="InGame Mangroot" width="25%" class="center" />
-    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2pG4Dv8w9hg" title="Video Gameplay Akasha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2pG4Dv8w9hg" title="Video Gameplay Mangroot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
 
     <h3>Akasha</h3>
     <p>
-        Akasha est un jeu crée durant une game jam regroupant des 1ère, 2nde et 3ème années à l'ETPA
+        Akasha is a game created during a Game Jam involving first-, second-, and third-year students at ESMA.
     </p>
-    <p>Il s'agit de ma première expérience avec la VR j'ai donc du le temps de la jam me familiariser avec le système et implémenter les méchaniques liées au gameplay.</p>
+    <p>This was my first experience with VR, so during the jam I spent time familiarizing myself with the system and implementing the gameplay-related mechanics.</p>
     <br>
-    <p><a href="https://vinek.itch.io/akasha"> Le jeu est téléchargeable ici et nécéssite un casque VR </a></p>
+    <p><a href="https://vinek.itch.io/akasha"> Game can be play using a VR headset </a></p>
     <img src="../IMG/AfficheAkasha.png" alt="ShowAkasha" width="25%" class="center" />
     <img src="../IMG/menuAkasha.jpg" alt="Lore Overcracked" width="25%" class="center" />
-    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/c-LAF8yfOKU?list=PLS6r3g3D6TLA-KY4aXZM8od7iCiuLYGm2" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/c-LAF8yfOKU?list=PLS6r3g3D6TLA-KY4aXZM8od7iCiuLYGm2" title="Video Gameplay Akasha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
 
     <h3>Fourmiz</h3>
     <p>
-        Fourmiz est un jeu crée à l'occasion de la game jam Inter-Ecole ETPA
+        Fourmiz is a game created for the ESMA Inter-School Game Jam.
     </p>
-    <p>Nous avons pour ce projet utilisé le plugin voxel d'Unreal car nous voulions avoir une direction artistique forte et avec une vraie cohérence graphique. Il s'agit d'un jeu bac à sable où le joueur doit détruire une fourmilière à l'aide de ses bombes. Tout un système d'achievement est implémenté dans le jeu en fonction des éléments détruit par le joueur. </p>
+    <p>For this project, we used Unreal’s voxel plugin to achieve a strong artistic direction with consistent visuals. It is a sandbox game where the player must destroy an anthill using bombs. A full achievement system is implemented based on the elements the player destroys. </p>
     <br>
-    <p><a href="https://thazerr.itch.io/fourmiz"> Le jeu est téléchargeable ici</a></p>
+    <p><a href="https://thazerr.itch.io/fourmiz">Link going directly on Itch.io</a></p>
     <img src="../IMG/AfficheFourmiz.png" alt="Showoff Fourmiz" width="25%" class="center" />
     <img src="../IMG/IGFourmiz.png" alt="in game view" width="25%" class="center" />
-    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/iC9NLUMKQS4?list=PLS6r3g3D6TLA-KY4aXZM8od7iCiuLYGm2" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/iC9NLUMKQS4?list=PLS6r3g3D6TLA-KY4aXZM8od7iCiuLYGm2" title="Video Gameplay Fourmiz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <br>
 </body>
 
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
