--- a/HTML/Futurs_projets.html
+++ b/HTML/Futurs_projets.html
@@ -2,28 +2,29 @@
 <html>
 <head>
 <link rel="stylesheet" href="../CSS/style.css" />
-<title>Futurs projets</title>
+<title>Future projects</title>
 </head>
 <body>
 
-<h1> Futurs projets</h1>
+<h1> Future projexts</h1>
 <h3> Drones </h3>
-<p> Drones est la préface du jeu que j'ai designé pour le concours de l'ENJMIN dont le thème etait lié à une série de documentaires d'<a href="https://www.arte.tv/fr/videos/RC-015330/propaganda">ARTE</a>.
-J'ai donc décidé de créer un jeu narratif ou le joueur incarne un drone qui parcourt la Terre dans une ambiance post Apocalyptique pour en apprendre plus sur le declin de la Terre. Lors de ses découvertes
-le joueur apprend que tout cela est lié à une société qui a fait fortune à l'aide de moyens marketing plus ou moins ethique. Le jeu se jouerai à l'aide d'un joystick type simulateur d'avion et l'HUD du joueur serait
-à l'image de l'interface présente dans Metroid Prime mais avec des données typiques des drones (Altitude, vitesse, relevé sonar).</p><br>
+<p> Drones is the preface of the game I designed for the ENJMIN contest, whose theme was connected to a series of ARTE documentaries.</a>
+I decided to create a narrative game in which the player embodies a drone traveling across Earth in a post-apocalyptic setting to learn more about the planet’s decline.
+Through its discoveries, the player realizes that everything is tied to a corporation that built its fortune through more or less ethical marketing practices.
+The game would be played with a flight-simulator-style joystick, and the player’s HUD would resemble the interface from Metroid Prime, but with data specific to drones (altitude, speed, sonar readings).</p><br>
 <img src="../IMG/HUDDrone.jpg" alt="Vision du joueurs à travers le drone" width="30%" class="center"/>
 <img src="../IMG/TerrePostApo.jpg" alt="Visuel de la Terre après sa chute" height="0%" class="center"/>
 <br>
 <h3> Don't panic </h3>
-<p> Don't panic est ma prochaine idée de jeu. Il s'agirait d'un jeu crée à l'aide du moteur Unity dont le but serait de sauver une cargaison de metaux de la main de pirates de l'espace. Pour cela il suffirait d'eviter des obstacles qui defilent à l'ecran.
-<br> Cependant la difficulté serait présente car le joueur devra utiliser un capteur cardiaque et la vitesse des obstacles augmenterait en fonction de la vitesse des battements du coeur du joueur. De plus tout l'univers autour du joueur le pousserait à commettre l'erreur de paniquer
-à cause de la musique qui ne cesserait d'accelerer ainsi que des changements de couleur de fond.<br></p><p>
-Le jeu s'inspire du jeu Rayman 3 vis a vis de ses scenes de slider Funkyboard et de l'ambiance psychédelique qui s'en degage </p>
+<p> Don't Panic is my next game idea. It would be a game created with the Unity engine, where the goal is to save a cargo of metals from space pirates.
+To do this, the player would simply need to avoid obstacles scrolling across the screen.
+<br> However, the challenge would come from the fact that the player must use a heart rate sensor, and the speed of the obstacles would increase according to the player’s heartbeat.
+In addition, the entire game environment would push the player toward making the mistake of panicking, with the music constantly speeding up and the background colors shifting.<br></p><p>
+The game is inspired by Rayman 3, particularly its Funkyboard slider levels and the psychedelic atmosphere they convey. </p>
 <img src="../IMG/Rayman3DontPanic.png" alt="Aperçus des niveaux funckyboard de rayman 3" width="49%" class="center"/>
 <br>
 </body>
 <footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
+<button><a href="../index.html">Back to main</a></button>
 </footer>
 </html>
