--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 <title>Portfolio Brieux CAQUELIN</title>
 </head>
 <body>
-<h1>Bienvenue sur mon Portfolio</h1>
-<p>Ici je vais presenter tous les projets auxquels j'ai participé mais également mes futurs projets.</p>
+<h1>Portfolio Brieux CAQUELIN - Gameplay programmer</h1>
+<p>Here is a presentation of all the projects I have participated in, as well as my future projects.</p>
 <iframe class='center' width="1280" height="720" src="https://www.youtube.com/embed/SZk0ehRPyec" title="Gameplay Programmer DemoReel 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 </body>
 
 <div class="center">
 <button class="center">
+  <a href="HTML/Professional_Project.html">Freelance project</a></button> <button class="center">
+  <a href="HTML/Post_School_Project.html">Post School</a></button> <button class="center">
   <a href="HTML/2022-2023.html">2022-2023</a></button> <button class="center">
   <a href="HTML/2021-2022.html">2021-2022</a></button> <button class="center">
   <a href="HTML/2020-2021.html">2020-2021</a></button> <button class="center">
@@ -20,14 +22,8 @@
   <a href="HTML/2017-2018.html">2017-2018</a></button> <button class="center">
   <a href="HTML/2016-2017.html">2016-2017</a></button> <button class="center">
   <a href="HTML/2015-2016.html">2015-2016</a></button> <button class="center">
-  <a href="HTML/Futurs_projets.html">Futurs projets</a></button>  <br>
+  <a href="HTML/Futurs_projets.html">Future projects</a></button>  <br>
 </div>
-<p> Ainsi que mes autres créations. </p>
-<button class="center"><a href="HTML/Autres_créations.html">Autres cr&eacute;ations</a></button>
-
 </body>
 
-<footer>
-<button><a href="../index.html">Retour à l'accueil</a></button>
-</footer>
 </html>
